--- a/styles.css
+++ b/styles.css
@@ -7,23 +7,19 @@
 :root{
   --color_barra: #ffffff;
 }
-.navegacion {
-  background-color: #924ef1
-;
+.navegacion_Contenedor {
+  background-color: #924ef1;
   color: var(--color_barra);
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
+  flex-flow: row nowrap;
+  justify-content: space-between;
   padding: 1rem 2rem;
-  box-shadow: #000000 0px 5px 10px;
+  box-shadow: #000000 0px 10px 30px;
 }
-a {
-  color: var(--color_barra);
-  display: flex;
-  flex-direction: column;
-  align-items:flex-end;
+.navegacion__enlaces a{
+  color:var(--color_barra);
   text-decoration: none;
+  margin: 15px;
 }
 .tarjeta img{
   padding: 10px;
@@ -44,7 +40,7 @@ h2{
   border-radius: 30px;
   color: var(--color_barra);
 }
-.tarjetas{
+.tarjetas_contenedor{
   display: flex;
   justify-content: center;
 }
@@ -77,12 +73,10 @@ h3{
   height: 300px;
   width: 80%;
   border-radius: 30px;
+  box-shadow: #000000 0px 10px 30px;
 }
 .contenedor_galeria img{
   border-radius: 10px;
+
 }
-/* .contenedor_galeria:nth-child(2){
-  border: #000000 solid 3px;
-  flex-grow: 2;
-  align-self: flex-end;
-} */
+
